Version 5.7.1 (XXX 2019)
 * Java bindings: Remove the obsolete senses API.
 * swig-4.0 compatibility bug fix.

Version 5.7.0 (13 Sept 2019)
 * Minor efficiency improvements to the SQL-backed dictionary.
 * Incompatible change to the Exp traversal API.
 * Remove the obsolete and unsupported "corpus statistics" code.
 * Major performance improvement (3x-4x) for long sentences. #996
 * Fix broken build on Windows.
 * Convert Windows build to Visual Studio 2019.
 * Fix a bug that causes random results on 32-bit systems. #1000
 * Fix a bug that could cause missing linkages on some systems. #1007

Version 5.6.2 (24 June 2019)
 * Bug-fix the SQL-backed dictionary.
 * Add missing public symbol to shlib export list.
 * English dict: additions of paraphrasing verbs.

Version 5.6.1 (27 May 2019)
 * Performance improvement (approx 20%) in expressions #882.
 * Performance improvement (approx 10%) by disjunct/connectors pools #896.
 * Performance improvement (4-10% for English) by faster power-pruning #903.
 * Fix a bug in trailing connectors encoding (may cause bad linkages).
 * Fix inability to form linkage when first word is disconnected.
 * English dict: fix use of quotations with paraphrasing verbs.
 * English dict: fix broken usage of "have not".
 * Performance improvement (approx 16%) for long sentences. #931
 * Performance improvement (approx 20%) for long sentences. #939

Version 5.6.0 (4 January 2019)
 * Improve Windows support.
 * Fix dict cost reading under user locales with comma decimal separator.
 * Support using the pcre2 regex package (configured by default if available).
 * Add "-with-regexlib=pcre2|tre|regex|c" to "configure".
 * Fix and document building on FreeBSD.
 * Major documentation update for building with Cygwin.
 * Revise the manpage.
 * Remove the experimental Viterbi code.
 * Revise the SAT parser cost model to align it with the classic parser.
 * Implement a strict check on connector name.