@@ -5190,8 +5190,9 @@ planned.v-d confessed.v-d:
 planning.g confessing.g: (<vc-plan> & <verb-ge>) or <verb-ge-d>;
 planning.v confessing.v: <verb-pg> & <vc-plan>;
 
+% <vc-trans> & QI+: "you decided that when?"
 <vc-decide>:
-  <vc-trans> or
+  (<vc-trans> & {QI+}) or
   ({@MV+} & {TH+ or {<QI+pref>} or
     <to-verb> or <embed-verb> or RSe+ or Zs-});
 
@@ -5205,7 +5206,6 @@ decides.v resolves.v:
   (<verb-and-sp-i-> & ([<vc-decide>]0.2 or ())) or
   ((<vc-decide>) & <verb-and-sp-i+>) or
   <verb-and-sp-t>);
-
 decided.v-d resolved.v-d:
   
   ((<verb-sp,pp> & (<vc-decide>)) or
@@ -5295,11 +5295,13 @@ proposes.v:
   (<verb-and-sp-i-> & ([<vc-propose>]0.2 or ())) or
   ((<vc-propose>) & <verb-and-sp-i+>) or
   <verb-and-sp-t>);
+
+% <vc-propose> & QI+: "You proposed this to her when?"
 proposed.v-d:
   
-  ((<verb-sp,pp> & (<vc-propose>)) or
-  (<verb-and-sp-i-> & ([<vc-propose>]0.2 or ())) or
-  ((<vc-propose>) & <verb-and-sp-i+>) or
+  ((<verb-sp,pp> & (<vc-propose> & {QI+})) or
+  (<verb-and-sp-i-> & ([<vc-propose> & {QI+}]0.2 or ())) or
+  ((<vc-propose> & {QI+}) & <verb-and-sp-i+>) or
   <verb-and-sp-t>)
   or (<verb-s-pv> & {THi+ or TSi+ or Z-})
   or <verb-adj>
@@ -5308,9 +5310,11 @@ proposing.g: (<vc-propose> & <verb-ge>) or <verb-ge-d>;
 proposing.v: <verb-pg> & <vc-propose>;
 
 % TO+ & Xc+: allows null-infinitive: "I did not demand to"
+% <vc-trans> & QI+: "You demand this why?"
+% O+ & <of-coord>: "You demanded this of him why?"
 <vc-demand>:
-  <vc-trans>
-  or <of-coord>
+  (<vc-trans> & {QI+})
+  or ({O+} & <of-coord>)
   or (<mv-coord> & <null-verb>)
   or ({@MV+} & ((<to-verb> or TH+ or Z- or TS+ or ((SI*j+ or SFI**j+) & I*j+))));
 demand.v: 
@@ -5323,6 +5327,7 @@ demands.v:
   (<verb-and-sp-i-> & ([<vc-demand>]0.2 or ())) or
   ((<vc-demand>) & <verb-and-sp-i+>) or
   <verb-and-sp-t>);
+
 demanded.v-d:
   
   ((<verb-sp,pp> & (<vc-demand>)) or
@@ -5461,8 +5466,9 @@ continuing.g: (<vc-begin> & <verb-ge>) or <verb-ge-d> or <verb-adj>;
 beginning.v continuing.v ceasing.v: <verb-pg> & <vc-begin>;
 
 % <vc-trans> with particle
+% <vc-trans> & QI+: "you started this when?"
 <vc-start>:
-  ((({O+ or <b-minus>} & {K+}) or
+  ((({O+ or <b-minus>} & {K+ or QI+}) or
     (K+ & {[[@MV+]]} & O*n+) or
     [[@MV+ & O*n+]]) & <mv-coord>) or
   ({@MV+} & (<to-verb> or Pg+));
@@ -5868,8 +5874,10 @@ figuring.g: (<vc-figure> & <verb-ge>) or <verb-ge-d>;
 figuring.v: <verb-pg> & <vc-figure>;
 
 % (QI+ & {MV+}): "I did not say why until recently"
+% <vc-trans> & QI+: "you said this to her where?"
+%    "you indicate this why?"
 <vc-predict>:
-  <vc-trans>
+  (<vc-trans> & {QI+})
   or ({@MV+} & (<embed-verb> or TH+ or RSe+ or Zs- or VC+))
   or ({@MV+} & (<QI+pref> & {MV+}));
 
@@ -5914,7 +5922,7 @@ envisaged.v-d documented.v-d:
   or <verb-adj>
   or <verb-phrase-opener>;
 
-% the second line is almost, not quite, <verb-s-pv>
+% The second line is almost, not quite, <verb-s-pv>
 said.v-d:
   
   ((<verb-sp,pp> & (<vc-predict>)) or
@@ -6015,7 +6023,8 @@ known.v well-known.v:
 knowing.g: (<vc-know> & <verb-ge>) or <verb-ge-d>;
 knowing.v: <verb-pg> & <vc-know>;
 
-<vc-request>: <vc-trans> or
+% <vc-trans> & QI+: "You requested these favors why?"
+<vc-request>: (<vc-trans> & {QI+}) or
   ({@MV+} & (TH+ or <embed-verb> or RSe+ or Zs- or TS+ or ((SI*j+ or SFI**j+) & I*j+)));
 request.v: 
   ((<verb-pl,i> & (<vc-request>)) or
