@@ -2252,11 +2252,17 @@ you decided this when?
 you decided on this when?
 you learned of this when?
 you started to wonder this, when?
+you started this when?
 You proposed this to her when?
 you said this to her where?
+You say this why?
 You demanded this why?
 You demanded this of him why?
 You requested these favors why?
+
+you decided to do this when?
+you decided such a thing when?
+you decided on this course of action when?
 
 you did what?
 You did that when?
